--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,10 @@ name: Release
 
 on:
   release:
-    types: [created]
+    types: [published]
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build:
@@ -33,7 +36,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.24.0'
 
     - name: Build binary
       shell: bash
