--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,18 +43,16 @@ jobs:
       run: |
         export GOOS=${{ matrix.goos }}
         export GOARCH=${{ matrix.goarch }}
+        OUTPUT_NAME="laravel-mcp-companion-go-${{ matrix.goos }}-${{ matrix.goarch }}"
         if [ "${{ matrix.goos }}" == "windows" ]; then
-          go build -o laravel-mcp-companion-go.exe cmd/server/main.go
-        else
-          go build -o laravel-mcp-companion-go cmd/server/main.go
+          OUTPUT_NAME="${OUTPUT_NAME}.exe"
         fi
+        go build -o "${OUTPUT_NAME}" cmd/server/main.go
 
     - name: Upload release asset
-      uses: actions/upload-release-asset@v1
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: laravel-mcp-companion-go-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.goos == 'windows' && '.exe' || '' }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./laravel-mcp-companion-go${{ matrix.goos == 'windows' && '.exe' || '' }}
-        asset_name: laravel-mcp-companion-go-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.goos == 'windows' && '.exe' || '' }}
-        asset_content_type: application/octet-stream
