--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,58 +1,54 @@
 name: Release
 
 on:
-  release:
-    types: [published]
   push:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    name: Build ${{ matrix.goos }}-${{ matrix.goarch }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
-            goos: linux
+          - goos: linux
             goarch: amd64
-          - os: ubuntu-latest
-            goos: linux
+          - goos: linux
             goarch: arm64
-          - os: macos-latest
-            goos: darwin
+          - goos: windows
             goarch: amd64
-          - os: macos-latest
-            goos: darwin
+          - goos: darwin
+            goarch: amd64
+          - goos: darwin
             goarch: arm64
-          - os: windows-latest
-            goos: windows
-            goarch: amd64
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.24.0'
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24.0'
 
-    - name: Build binary
-      shell: bash
-      run: |
-        export GOOS=${{ matrix.goos }}
-        export GOARCH=${{ matrix.goarch }}
-        OUTPUT_NAME="laravel-mcp-companion-go-${{ matrix.goos }}-${{ matrix.goarch }}"
-        if [ "${{ matrix.goos }}" == "windows" ]; then
-          OUTPUT_NAME="${OUTPUT_NAME}.exe"
-        fi
-        go build -o "${OUTPUT_NAME}" cmd/server/main.go
+      - name: Build
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
+        run: |
+          if [ "$GOOS" = "windows" ]; then
+            go build -v -o laravel-mcp-companion-go-$GOOS-$GOARCH.exe cmd/server/main.go
+          else
+            go build -v -o laravel-mcp-companion-go-$GOOS-$GOARCH cmd/server/main.go
+          fi
 
-    - name: Upload release asset
-      uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: laravel-mcp-companion-go-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.goos == 'windows' && '.exe' || '' }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: laravel-mcp-companion-go-*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
